--- a/.github/workflows/publish_docker_hub.yml
+++ b/.github/workflows/publish_docker_hub.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   publish:
     name: Publish to Docker Hub
-    runs-on: ubuntu-20.04
+#     runs-on: ubuntu-20.04
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
 
@@ -29,7 +30,8 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           context: studio
-          platforms: linux/amd64,linux/arm64
+#           platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: true
           tags: supabase/studio:latest
           target: production
