--- a/.github/workflows/publish_docker_hub.yml
+++ b/.github/workflows/publish_docker_hub.yml
@@ -18,14 +18,15 @@ jobs:
 
       - uses: docker/setup-qemu-action@v1
         with:
-          platforms: amd64,arm64
+          platforms: arm64
+#           platforms: amd64,arm64
 
       - uses: docker/setup-buildx-action@v1
 
       - uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME2 }}
+          password: ${{ secrets.DOCKER_PASSWORD2 }}
 
       - uses: docker/build-push-action@v2
         with:
@@ -33,5 +34,5 @@ jobs:
 #           platforms: linux/amd64,linux/arm64
           platforms: linux/arm64
           push: true
-          tags: supabase/studio:latest
+          tags: joyading/studio:latest
           target: production
