--- a/.github/workflows/publish_docker_hub.yml
+++ b/.github/workflows/publish_docker_hub.yml
@@ -25,8 +25,8 @@ jobs:
 
       - uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME2 }}
-          password: ${{ secrets.DOCKER_PASSWORD2 }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - uses: docker/build-push-action@v2
         with:
@@ -34,5 +34,5 @@ jobs:
 #           platforms: linux/amd64,linux/arm64
           platforms: linux/arm64
           push: true
-          tags: joyading/studio:latest
+          tags: supabase-arm/studio:latest
           target: production
